# YDBCMake

./: .gitlab-ci.yml  Dockerfile-rocky  Dockerfile-ubuntu  README.md  pre-commit
ci/: needs_copyright.sh  test_ydb_container.sh
test/: CMakeLists.txt  test1.m  test2.m
ydbcmake/: CMakeDetermineMCompiler.cmake  CMakeMInformation.cmake  FindYOTTADB.cmake
